[package]
name = "pg_uuidv7"
version = "0.2.0"
edition = "2021"
description = "A PostgreSQL extension to generate v7 UUIDs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bkircher/pg_uuidv7"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.13.1"
thiserror = "2.0"
uuid = { version = "1.16", features = ["std", "v7"] }

[dev-dependencies]
pgrx-tests = "0.13.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
